# dichiaro

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/models/: __init__.py
backend/parser/: extractor.py  importer.py  normalizer.py  number_parser.py  registry.py
frontend/: app.py
scripts/: reset_and_reimport.py
tests/: test_models.py  test_parser.py
