[project]
name = "dichiaro"
version = "1.0.0"
description = "Il tuo 730 sotto controllo — importa, analizza e monitora le dichiarazioni dei redditi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "sqlalchemy>=2.0",
    "pymupdf>=1.24",
    "pydantic>=2.0",
    "pandas>=2.0",
]

[project.scripts]
dichiarazione730 = "dichiarazione730-analyzer.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
